samples/_failures_safe/1761790030_c60a2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfaf2f0f.c: In function ‘main’:
./samples/SAFE/__tmp_dfaf2f0f.c:165:9: error: ‘comp’ undeclared (first use in this function)
  165 |     if (comp
      |         ^~~~
./samples/SAFE/__tmp_dfaf2f0f.c:165:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dfaf2f0f.c:165:13: error: expected ‘)’ at end of input
  165 |     if (comp
      |        ~    ^
      |             )
./samples/SAFE/__tmp_dfaf2f0f.c:165:5: error: expected declaration or statement at end of input
  165 |     if (comp
      |     ^~
